# data-denoise

./: .dockerignore  DB_Configuration.py  DataCleaner.py  DataProcessor.py  Data_Files.tar  Dataset2.csv  README.md  SQLServerImportSet1.py  SQLServerImportSet2.py  SolutionChecker.py  StatisticsLibrary.py  dockerfile  pyproject.toml  setup.py
.github/workflows/: build-artifacts.yml  (+4 more)
Archive/: Data_to_SQL.py
Data_Files/: DB_CreateTable_Queries.sql  Wire0_IV.csv  Wire0_Icrit.csv  Wire1_IV.csv  Wire1_Icrit.csv  Wire2_IV.csv  Wire2_Icrit.csv  Wire3_IV.csv  Wire3_Icrit.csv  Wire4_IV.csv  Wire4_Icrit.csv  Wire5_Icrit.csv  Wire6_Icrit.csv  exponential1.csv  exponential2.csv  exponential3.csv  linear1.csv  linear2.csv  sigmoid1.csv  sigmoid2.csv
kubernetes/: data-denoise-deployment.yaml  data-denoise-service.yaml
output_csv_reports/: plot_data_comparison_export_4c383c20-9cab-4871-8261-84b9039d10d1.csv  plot_data_comparison_export_fd03e72f-8a63-42af-9e69-1bb1fd3650cd.csv  results_comparison_export_4c383c20-9cab-4871-8261-84b9039d10d1.csv  results_comparison_export_f02f45b5-9161-48a1-8983-ecfb78ac00bc.csv  results_comparison_export_fd03e72f-8a63-42af-9e69-1bb1fd3650cd.csv
sess_uploads/: parabola1.csv
src/: DataDenoise.py  DataDenoise_MAIN.py  DataProcessor.py  SolutionChecker.py  UserInterface.py  data_denoise.py  data_denoise_main.py  data_denoise_web_main.py  data_processor.py  solution_checker.py  user_interface.py
templates/: index.html  main_menu.html  plot.html  process_menu.html
tests/: test_data_import.py  test_fit_results.py  test_outlier_identification.py
(+14 files in other folders)
